--- a/components/java-quarkus-teoewqoo/overlays/development/deployment-patch.yaml
+++ b/components/java-quarkus-teoewqoo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-quarkus-teoewqoo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/java-quarkus-teoewqoo:ba397cba9dfd97974caaa136813c22e8e760f581@sha256:4c0797ec32b7f828383db912dc0dbcfcfc7b4c9b0c504b58a9e38e2586642d02
+          name: container-image
